fix 2quotes spacing

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -34,9 +34,16 @@
 
   .quote-with-image { 
     background: $bridal-heath;
-    // display: flex;
+    display: flex;
 
     .quote {
+      @include quote-margin-padding-styles;
+      margin: 0 !important;
+      padding-right: 0 !important;
+      @include media-breakpoint-up(xl) {
+        // padding-right: calc(#{$column} / 12) !important;
+      }
+      
       background: $bridal-heath;
       display: inline-block;
       width: 6 * $column;
